--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,15 +31,18 @@
     <string name="action_list_tank">List des tanks</string>
     <string name="action_add_tank">Ajouter un tank</string>
     <string name="action_close_tank">Annuler</string>
+    <string name="action_init_data">Initialiser les données</string>
 
 
     <string name="title_activity_list_tank">Liste des tanks</string>
     <string name="title_activity_add_tank">Ajouter un tank</string>
 
+
     <!-- Mandatory -->
     <string name="nom_mandatory">Le nom est obligatoire</string>
 
     <string name="tank_save">Le tank est sauvegardé</string>
+    <string name="db_tank_initialized">La base de données des tanks a été initialisée.</string>
 
 
 </resources>
