--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
 
     <!-- Mandatory -->
     <string name="nom_mandatory">Le nom est obligatoire</string>
+    <string name="pv_mandatory">Le nombre de point de vie est obligatoire</string>
 
     <string name="tank_save">Le tank est sauvegardé</string>
     <string name="db_tank_initialized">La base de données des tanks a été initialisée.</string>
