--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="genre">Genre</string>
     <string name="nom">Nom</string>
     <string name="pv">Pv</string>
+    <string name="nb_tank">Nombres de tanks</string>
+
 
     <!-- Action -->
     <string name="action_list_tank">List des tanks</string>
@@ -38,6 +40,8 @@
 
     <string name="title_activity_list_tank">Hangar</string>
     <string name="title_activity_add_tank">Ajouter un tank</string>
+    <string name="title_activity_list_equipe">Equipe</string>
+    <string name="title_activity_add_equipe">Ajouter une équipe</string>
 
 
     <!-- Mandatory -->
@@ -46,7 +50,13 @@
 
     <string name="tank_save">Le tank est sauvegardé</string>
     <string name="tank_delete">Le tank est supprimé</string>
+
+    <string name="equipe_save">L\'équipe est sauvegardé</string>
+    <string name="equipe_delete">L\'équipe est supprimé</string>
+
     <string name="db_tank_initialized">La base de données des tanks a été initialisée.</string>
+
+
 
 
 </resources>
