--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="equipe_notsave">Erreur à la sauvegarde de l\'équipe</string>
     <string name="equipe_delete">L\'équipe est supprimé</string>
 
-    <string name="db_tank_initialized">La base de données des tanks a été initialisée.</string>
+    <string name="db_initialized">La base de données a été initialisée.</string>
 
 
 
