--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="return_bataille">Continuer la bataille</string>
     <string name="action_end_bataille">Terminer la baraille</string>
     <string name="bataille_save">La bataille est crée</string>
+    <string name="current_bataille_save">La bataille est sauvegardée</string>
+    <string name="current_bataille_end">La bataille est terminée</string>
     <string name="no_current_bataille">Aucune bataille en cours. Il faut en créer une.</string>
 
 
