--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="genre">Genre</string>
     <string name="nom">Nom</string>
     <string name="pv">Pv</string>
+    <string name="victoire">Victoire</string>
     <string name="nb_tank">Nombres de tanks</string>
 
     <!-- Fiche Equipe -->
