--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="genre">Genre</string>
     <string name="nom">Nom</string>
     <string name="pv">Pv</string>
+    <string name="image">Image</string>
     <string name="victoire">Victoire</string>
     <string name="victoires">Victoires</string>
     <string name="et">et</string>
