--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="import_reload_list">Rafraichissez la page</string>
 
     <!--URL-->
+    <string name="menu_http">Liens</string>
     <string name="menu_kath">Kath Equitation</string>
     <string name="menu_hippologie">http://www.hippologie.fr/</string>
 
