--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="title_activity_list_cours">Reprises</string>
     <string name="title_activity_add_cours">Nouvelle reprise</string>
     <string name="title_activity_filter">Filtrer</string>
+    <string name="title_activity_add_evenement">Evènement</string>
 
     <!--Home-->
     <string name="title_home_moniteurs">Moniteurs</string>
@@ -59,7 +60,7 @@
 
     <!-- Type evenement -->
     <string name="type_evenement_ferrage">Ferrage</string>
-    <string name="type_evenement_parage">Patage</string>
+    <string name="type_evenement_parage">Parage</string>
     <string name="type_evenement_vaccin">Vaccin</string>
     <string name="type_evenement_autre">Autre</string>
 
@@ -80,6 +81,7 @@
     <string name="monture_save">La monture est sauvegardée</string>
     <string name="monture_delete">La monture est supprimée</string>
     <string name="evenement_delete">Evénement supprimé</string>
+    <string name="evenement_save">Evénement sauvegardé</string>
 
     <!--Cours-->
     <string name="cours_save">La reprise est sauvegardée</string>
