--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,10 @@
     <string name="planning_delete">L\'évènement est supprimé</string>
     <string name="title_activity_add_planning">Ajouter un évènement</string>
 
+    <string name="action_today">Affichage</string>
+    <string name="action_day_view">Aujourd\'hui</string>
+    <string name="action_three_day_view">Vue 3 jours</string>
+    <string name="action_week_view">Vue hebdomadaire</string>
 
 
 </resources>
