--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- Action -->
     <string name="action_save">Sauvegarder</string>
     <string name="action_close">Annuler</string>
+    <string name="action_end">Fermer</string>
     <string name="action_delete">Supprimer</string>
     <string name="action_init_data">Initialiser les données</string>
     <string name="action_filter">Filtrer</string>
