--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,12 +133,18 @@
     <string name="title_activity_delete_planning">Supprimer l\'évènement</string>
     <string name="title_activity_update_planning">Evènement</string>
 
+    <string name="planning_cours">Reprise</string>
+    <string name="planning_cours_planifie">Reprise planifiée</string>
+    <string name="planning_note">Note</string>
+
     <string name="action_today">Affichage: </string>
     <string name="action_day_view">Aujourd\'hui</string>
     <string name="action_three_day_view">Vue 3 jours</string>
     <string name="action_week_view">Vue hebdomadaire</string>
     <string name="action_transform_reprise">Transformer en reprise</string>
     <string name="action_transform_reprise_ok">Reprise sauvegarder</string>
+
+
 
 
 </resources>
